# ForgeLoop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.forge  README.md  docker-compose.yml  fly.forge.toml  fly.toml
.claude/: settings.json
.github/workflows/: deploy.yml
docs/: README.md  architecture.md  auth.md  deploy-fly.md  deploy.md  desktop-capture-spike.md  forge-setup.md  loop-engineering.md  loopy-setup.md  recorder-hosting.md
examples/: README.md
examples/form-fill/: README.md  RECEIPT.agentic.md  RECEIPT.live.md  RECEIPT.md  SKILL.md  TRACE_GUIDE.md  evidence.jsonl  local_server.py  loop.md  meta.json  trace.json
examples/login-flow/: README.md  RECEIPT.live.md  RECEIPT.md  SKILL.md  TRACE_GUIDE.md  evidence.jsonl  local_server.py  loop.md  meta.json  trace.json
forge/: .gitignore  .gitlab-ci.yml  README.md  config.example.env  requirements.txt
forge/desktop/: package.json
forge/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.release.conf.json
forge/desktop/src-tauri/capabilities/: default.json
forge/desktop/src-tauri/icons/: icon.icns
forge/desktop/src-tauri/src/: main.rs
forge/docs/: auto-update.md  claude-desktop-setup.md  native-app-build.md  trace-schema.md
forge/entry/: main.py
forge/extension/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
integration/: README.md  requirements.txt
loopy/: .gitignore  AGENTS.md  README.md
scripts/: agentic_demo.py  bootstrap.sh  live_demo.py  setup-forge.sh  setup-loopy.sh  smoke.sh  vendor.sh  write-env.sh
(+145 files in other folders)
