[package]
name = "journey-forge-local"
version = "0.1.8"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
# generate_context!() expands to serde_json-using code once the updater config
# (pubkey/endpoints) is present, so these must be direct deps.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
